# Adaptation-SCR

./: .gitignore  README.md  pyproject.toml
ZSSGAN/: train.py
ZSSGAN/config/: config.yaml
ZSSGAN/criteria/: clip_loss.py
ZSSGAN/model/: ZSSGAN.py  sg2_model.py
ZSSGAN/op/: upfirdn2d_kernel.cu
ZSSGAN/options/: train_options.py
ZSSGAN/utils/: file_utils.py  training_utils.py
